src/input.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-image: url("../Img/background6.jpg");
  background-size: cover;
  margin: 0; /* Remove any default margins */
  padding: 0;
  background-repeat: no-repeat;
  backdrop-filter: blur(3px);
  background-position: center;
  background-attachment: fixed; /* This ensures that the background remains fixed when scrolling */
}

/* Show scrollbar when actively scrolling */
body::-webkit-scrollbar-thumb {
  background: lightblue; /* Adjust this to your preferred scrollbar color */
}

/* Hide scrollbar track and buttons */
body::-webkit-scrollbar {
  width: 6px; /* Adjust the width to your preference */
  height: 6px;
  background: transparent; /* Hide scrollbar track */
}

.glowing-underline {
  position: relative;
  display: inline-block;
  padding-bottom: 0.2em; /* Adjust the distance of the underline from the text */
}

.glowing-underline::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -1px; /* Adjust the distance of the underline from the text */
  width: 100%;
  height: 6px; /* Adjust the thickness of the underline */
  background-image: linear-gradient(
    90deg,
    #a0d5f7,
    #b4e3ff,
    #a0d5f7
  ); /* Light blue gradient colors */
  background-repeat: no-repeat;
  background-size: 200% 100%; /* Add a transition for the glowing effect */
  background-position: 100%;
  border-radius: 5px; /* Adjust the corner rounding */
  animation: glowing-underline-animation 2s infinite linear;
}

@keyframes glowing-underline-animation {
  0% {
    background-position: 100%;
  }
  50% {
    background-position: 0%;
  }
  100% {
    background-position: 100%;
  }
}

.text-glow {
  font-size: 24px;
  background-image: linear-gradient(
    90deg,
    #a0d5f7,
    #b4e3ff,
    #a0d5f7
  ); /* Light blue gradient colors */
  -webkit-background-clip: text; /* Apply the gradient as text fill */
  background-clip: text; /* Apply the gradient as text fill */
  color: transparent; /* Hide the original text */
  animation: glowing-text 2s infinite linear;
}

@keyframes glowing-text {
  0% {
    background-position: 100%;
  }
  50% {
    background-position: 0%;
  }
  100% {
    background-position: 100%;
  }
}

.bg-LightBlue {
  --tw-bg-opacity: 1;
  background-color: hsl(169 100% 41% / var(--tw-bg-opacity));
}

.text-LightBlue {
  --tw-text-opacity: 1;
  color: hsl(169 100% 41% / var(--tw-text-opacity));
}

.border-LightBlue {
  border: 2px solid hsl(169 100% 41%);
}

.hover\:border-LightBlue:hover {
  border: 2px solid hsl(169 100% 41%);
}

.bg-DarkBlue {
  --tw-bg-opacity: 1;
  background-color: hsl(169 100% 7% / var(--tw-bg-opacity));
}

.text-DarkBlue {
  --tw-text-opacity: 1;
  color: hsl(169 100% 7% / var(--tw-text-opacity));
}

.custom-gradient-right {
  background-image: linear-gradient(
    to right,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-left {
  background-image: linear-gradient(
    to left,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-bottom {
  background-image: linear-gradient(
    to bottom,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-top {
  background-image: linear-gradient(
    to top,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.hamburger {
  cursor: pointer;
  width: 24px;
  height: 24px;
  transition: all 0.25s;
  position: relative;
}

.hamburger-top,
.hamburger-middle,
.hamburger-bottom {
  position: absolute;
  top: 0;
  left: 0;
  width: 24px;
  height: 2px;
  transform: rotate(0);
  transition: all 0.5s;
}

.hamburger-middle {
  transform: translateY(7px);
}

.hamburger-bottom {
  transform: translateY(14px);
}

.open {
  transform: rotate(90deg);
  transform: translateY(0px);
}

.open .hamburger-top {
  transform: rotate(45deg) translateY(6px) translate(6px);
}

.open .hamburger-middle {
  display: none;
}

.open .hamburger-bottom {
  transform: rotate(-45deg) translateY(6px) translate(-6px);
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/* body {
  background-image: url("../Img/background6.jpg");
  background-size: cover;
  backdrop-filter: blur(3px);
  background-repeat: repeat;
  background-position: center center;
  background-position: center 25%; */
/* } */

.bg-LightBlue {
  --tw-bg-opacity: 1;
  background-color: hsl(169 100% 41% / var(--tw-bg-opacity));
}

.text-LightBlue {
  --tw-text-opacity: 1;
  color: hsl(169 100% 41% / var(--tw-text-opacity));
}

.border-LightBlue {
  border: 2px solid hsl(169 100% 41%);
}

.border-bottom-LightBlue {
  border-bottom: 2px solid hsl(169 100% 41%);
}

.bg-DarkBlue {
  --tw-bg-opacity: 1;
  background-color: hsl(169 100% 7% / var(--tw-bg-opacity));
}
.bg-DarkBlue2 {
  --tw-bg-opacity: 1;
  background-color: hsl(176 100% 8% / var(--tw-bg-opacity));
}

.text-DarkBlue {
  --tw-text-opacity: 1;
  color: hsl(169 100% 7% / var(--tw-text-opacity));
}

.custom-gradient-right {
  background-image: linear-gradient(
    to right,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-left {
  background-image: linear-gradient(
    to left,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-bottom {
  background-image: linear-gradient(
    to bottom,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.custom-gradient-top {
  background-image: linear-gradient(
    to top,
    hsl(360, 100%, 100%),
    hsl(169 100% 41%)
  );
}

.hamburger {
  cursor: pointer;
  width: 24px;
  height: 24px;
  transition: all 0.25s;
  position: relative;
}

.hamburger-top,
.hamburger-middle,
.hamburger-bottom {
  position: absolute;
  top: 0;
  left: 0;
  width: 24px;
  height: 2px;
  transform: rotate(0);
  transition: all 0.5s;
}

.hamburger-middle {
  transform: translateY(7px);
}

.hamburger-bottom {
  transform: translateY(14px);
}

.open {
  transform: rotate(90deg);
  transform: translateY(0px);
}

.open .hamburger-top {
  transform: rotate(45deg) translateY(6px) translate(6px);
}

.open .hamburger-middle {
  display: none;
}

.open .hamburger-bottom {
  transform: rotate(-45deg) translateY(6px) translate(-6px);
}

@media (min-width: 240px) {
  .sm\:custom-gradient-top {
    background-image: linear-gradient(
      to top,
      hsl(360, 100%, 100%),
      hsl(169 100% 41%)
    ); /* Your gradient colors */
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
  }
}

@media (min-width: 768px) {
  .md\:custom-gradient-bottom {
    background-image: linear-gradient(
      to bottom,
      hsl(360, 100%, 100%),
      hsl(169 100% 41%)
    ); /* Your gradient colors */
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
  }
}

.start-resource-even {
  transform: translateX(100px) translateY(60px);
  transition: 1000ms;
  opacity: 0;
}

.start-resource-odd {
  transform: translateX(-100px) translateY(60px);
  transition: 1000ms;
  opacity: 0;
}

.end-resource {
  opacity: 1;
  transform: translateX(0px) translateY(0px);
}

@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

.recentlyAdded-start {
  transform: translateY(100px);
  opacity: 0;
  transition-duration: 1000ms;
}

.recentlyAdded-end {
  transform: translateY(0px);
  opacity: 1;
}

.view-start {
  opacity: 0;
  transition: 1000ms 1500ms;
}

.view-end {
  opacity: 1;
}

.project-start {
  transform: translateY(100px);
  opacity: 0;
  transition-duration: 1000ms;
}

.project-end {
  transform: translateY(0px);
  opacity: 1;
}

.homepage-start {
  transform: translateY(35px);
  opacity: 0;
  transition-duration: 1000ms;
}

.homepage-end {
  transform: translateY(0px);
  opacity: 1;
}

